--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://maryellyfaustino.github.io/Hanami/",
+  "homepage": "https://maryellyfaustino.github.io",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
